Actualice el index.html para que pueda mostrar una imágen como logo en la pestaña

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang ="es">
 	<head>
 		<title>Este texto es el título del documento </title>
+		<meta charset = "utf-8">
+		<meta name = "description" content = "Este es un documento de HTML5">
+		<meta name = "keywords" content = "HTML, CSS, JavaScript">
+		<LINK rel="icon" href="Imágenes/LogoKarateka.png" type="image/png" sizes="16x16">
 	</head>
 	<body>
-		<p>Hola Mundo!</p>
 	</body>
 </html>
