Añadi al archivo una estructura tradicional, además de añadir un h1, para probar como se ve

--- a/index.html
+++ b/index.html
@@ -8,5 +8,32 @@
 		<LINK rel="icon" href="Imágenes/LogoKarateka.png" type="image/png" sizes="16x16">
 	</head>
 	<body>
+		<header> 
+			<h1> Este es el titulango pariente </h1>
+		</header>
+		<nav>
+			PRINCIPAL | FOTOS | VIDEOS | CONTACTO
+		</nav>
+		<main>
+			<section>
+				<article>
+					Este es el texto de mi primer articulo
+				</article>
+				<article>
+					Este puede ser el texto de mi segundo articulo
+				</article>
+				<article>
+					Creo que este es el texto de mi segundo articulo
+				</article>
+			</section>
+			<aside>
+				Cita del articulo 1
+				Cita del articulo 2
+				Cita del articulo 3
+			</aside>
+		</main>
+		<footer>
+			&copy; Derechos reservados 2025
+		</footer>
 	</body>
 </html>
