--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 		<LINK rel="icon" href="Imágenes/LogoKarateka.png" type="image/png" sizes="16x16">
 	</head>
 	<body>
-		<header> 
+		<header id="Titulo"> <!-- Se le agrego un id al header, para poder volver a este por un enlace -->
 			<h1> Este es el titulango pariente </h1>
 		</header>
 		<nav>
-			PRINCIPAL | FOTOS | VIDEOS | CONTACTO
+			<a href="index.html">PRINCIPAL</a>
+			<a href="fotos.html">FOTOS</a> 
+			<a href="videos.html">VIDEOS</a>
+			<a href="contacto.html">CONTACTO</a>
 		</nav>
 		<main>
 			<section>
@@ -60,6 +63,7 @@
 				</article>
 			</section>
 			<aside>
+				<p><a href="#Titulo">VOLVER</a></p>
 				Cita del articulo 1
 				Cita del articulo 2
 				Cita del articulo 3
@@ -68,9 +72,11 @@
 			</aside>
 		</main>
 		<footer>
-			<!-- Se esta agregando los elementos <address> y <small> -->
+			<!-- Se esta agregando los elementos <address> y <small>; También se agregará
+			un enlace a una página mía -->
 			<address>Santa Cruz, Bolivia</address>
-			<small>&copy; Derechos reservados 2025</small>
+			<small>&copy; Derechos reservados 2025, web de San Valentín 
+			<a href=""target=_blank">Mateo</a></small>
 		</footer>
 	</body>
 </html>
