No me fije en un error en uno de los enlaces..., en este está corregido

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			un enlace a una página mía -->
 			<address>Santa Cruz, Bolivia</address>
 			<small>&copy; Derechos reservados 2025, web de San Valentín 
-			<a href="https://matiusprog.github.io/SanValentin/"target=_blank">Mateo</a></small>
+			<a href="https://matiusprog.github.io/SanValentin/"target="_blank">Mateo</a></small>
 		</footer>
 	</body>
 </html>
