--- a/videos.html
+++ b/videos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang ="es">
 	<head>
-		<title>Aquí algunos videos interesantes</title>
+		<title>YO SOY BATMAN</title>
 		<meta charset = "utf-8">
 		<meta name = "description" content = "Este es un documento de HTML5">
 		<meta name = "keywords" content = "HTML, CSS, JavaScript">
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header> 
-			<h1> Este es el titulango pariente </h1>
+			<h1> Mira estos videangos sobrino </h1>
 		</header>
 		<nav>
 			<a href="index.html">PRINCIPAL</a>
