--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 			<!-- Se esta agregando los elementos <address> y <small>; También se agregará
 			un enlace a una página mía -->
 			<address>Santa Cruz, Bolivia</address>
-			<small>&copy; Derechos reservados 2025, web de San Valentín 
-			<a href="https://matiusprog.github.io/SanValentin/"target="_blank">Mateo</a></small>
+			<small>&copy; Derechos reservados 2025,
+			<a href="https://matiusprog.github.io/SanValentin/"target="_blank"Web de San Valentín></a></small>
 		</footer>
 	</body>
 </html>
