--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			un enlace a una página mía -->
 			<address>Santa Cruz, Bolivia</address>
 			<small>&copy; Derechos reservados 2025,
-			<a href="https://matiusprog.github.io/SanValentin/"target="_blank"Web de San Valentín></a></small>
+			<a href="https://matiusprog.github.io/SanValentin/"target="_blank">Web de San Valentín></a></small>
 		</footer>
 	</body>
 </html>
