Probando la primera imágen, además de sus medidas

--- a/fotos.html
+++ b/fotos.html
@@ -28,6 +28,7 @@
 					serán ceniza, mas tendrá sentido;<br>
 					polvo serán, mas polvo <i>enamorado.</i>"<br>
 					"Amor constante más allá de la muerte" - Francisco de Quevedo</p>
+					<img src="imágenes/Juntosenlau.jpeg" width="1000" alt="Karen y yo en la Universidad.">
 				</article>
 				<article>
 					<!-- Se hace uso de <p> y <br> también prueba de imágenes -->
