Subi otras 2 imágenes, con 450 pix de width

--- a/fotos.html
+++ b/fotos.html
@@ -39,6 +39,7 @@
 					El amor es un niño que nunca crece,<br>
 					porque siempre está naciendo."<br>
 					"El amor" - Rafael Alberti</p>
+					<img src="Imágenes/Juntosmariobros.jpeg" width="450" alt="Karen y yo disfrazados de Mario bros">
 				</article>
 				<article>
 					<!-- Uso de pre para un poema -->
@@ -52,6 +53,7 @@
 						
 						Soneto XVII" - Pablo Neruda
 					</pre>
+					<img src="Imágenes/KarenOriente.jpeg" width="450" alt="Karen con polera de oriente petrolero">
 				</article>
 			</section>
 			<aside>
