Se añadieron varios elementos capaces de hacer listas, para probar que tal se ven y si funcionan correctamente

--- a/contacto.html
+++ b/contacto.html
@@ -63,12 +63,58 @@
 				</article>
 			</section>
 			<aside>
-				Cita del articulo 1
-				Cita del articulo 2
-				Cita del articulo 3
-				Cita del articulo 4
-				Cita del articulo 5
+				<!-- Se está haciendo uso de <ul> y de <li> para probar estas listas -->
+				<ul>
+					<li>It, Stephen King</li>
+					<li>Carrie, Stephen King</li>
+					<li>El resplandor, Stephen King</li>
+					<li>Misery, Stephen King</li> 
+				</ul>
 			</aside>
+			<aside>
+				<!-- Se hace prueba del elemento <ol> y de su atributo type-->
+				<ol type="I">
+					<li>It, Stephen King</li>
+					<li>Carrie, Stephen King</li>
+					<li>El resplandor, Stephen King</li>
+					<li>Misery, Stephen King</li>
+				</ol>
+			</aside>
+			<aside>
+				<!-- Uso de las listas con términos y elementos -->
+				<dl>
+					<dt>IT</dt>
+					<dd>Tras lustros de tranquilidad y lejania una antigua promesa 
+					infantil les hace volver al lugar en el que vivieron su infancia y
+					juventud como una terrible pesadilla.</dd>
+					<dt>Carrie</dt>
+					<dd>Sus compañeros se burlan de ella, pero Carrie tiene un don.
+					Puede mover cosas con su mente. Este es su poder y su gran
+					problema.</dd>
+					<dt>El resplandor</dt>
+					<dd>Al escritor Jack Torrance le es ofrecido un empleo como cuidador
+					del hotel Overlook durante el invierno junto a su familia.</dd>
+					<dt>Misery</dt>
+					<dd>Paul Sheldon es un famoso escritor de novelas románticas 
+					ambientadas en la época victoriana, cuyo personje principal se llama
+					Misery Chastain.</dd>
+				</dl>
+			</aside>
+			<aside>
+				<!-- Uso del elemento <blockquote> para crear una lista -->
+				<blockquote>IT</blockquote>
+				<blockquote>Carrie</blockquote>
+				<blockquote>El resplandor</blockquote>
+				<blockquote>Misery</blockquote>
+			</aside>
+			<!-- Uso del elem <details> Y <summary> para hacer una lista que se expande -->
+			<details>
+				<summary>Mis libros</summary>
+				<p>IT</p>
+				<p>Carrie</p>
+				<p>El resplandor</p>
+				<p>Misery</p>
+			</details>
 		</main>
 		<footer>
 			<!-- Se esta agregando los elementos <address> y <small> -->
